--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -11,14 +11,15 @@
         <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
           <li nz-menu-item>
             <i nz-icon nzType="user"></i>
-            <span>主页</span>
+            <span>nav 1</span>
           </li>
           <li nz-menu-item>
-            <i nz-icon nzType="video-camera"></i>数据传输
+            <i nz-icon nzType="video-camera"></i>
+            <span>nav 2</span>
           </li>
           <li nz-menu-item>
             <i nz-icon nzType="upload"></i>
-            <span>数据概览</span>
+            <span>nav 3</span>
           </li>
           <li nz-menu-item>
             <i nz-icon nzType="user"></i>
