--- a/src/app/components/grid-responsive/grid-responsive.component.html
+++ b/src/app/components/grid-responsive/grid-responsive.component.html
@@ -1,13 +1,26 @@
 
-    <div nz-row>
-      <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="10">
-        Col
+    <div  nz-row nzGutter="80">
+      <div nz-col  nzXs="24" nzMd="12">
+        数据库
+        <app-cascader-lazyload></app-cascader-lazyload>
+       
+        <br>
+        <br>
+        <app-table-custom></app-table-custom>
       </div>
-      <div nz-col nzXs="20" nzSm="16" nzMd="12" nzLg="8" nzXl="4">
-        Col
+
+      <div nz-col nzXs="24" nzMd="12">
+        本地
+       
+        <app-cascader-lazyload></app-cascader-lazyload>
+         <br>
+        <br>
+        <app-table-custom></app-table-custom>
       </div>
-      <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="10">
-        Col
+      <div nz-col nzSpan="24" nzOffset="11">
+        
+        <button  nz-button nzSize='large' nzType="primary">提交</button>
       </div>
+    
     </div>
   
