--- a/src/app/pages/page-datasmanage.html
+++ b/src/app/pages/page-datasmanage.html
@@ -1,5 +1,30 @@
 
 
-<div id='page-datasmanage'>
+<!-- <div id='page-datasmanage'></div> -->
 
-</div>
+
+<div  nz-row nzGutter="80">
+    这里是数据管理页面
+    <div nz-col  nzXs="24" nzMd="12">
+      数据库
+      <app-cascader-lazyload></app-cascader-lazyload>
+     
+      <br>
+      <br>
+      <app-table-custom></app-table-custom>
+    </div>
+
+    <div nz-col nzXs="24" nzMd="12">
+      本地
+     
+      <app-cascader-lazyload></app-cascader-lazyload>
+       <br>
+      <br>
+      <app-table-custom></app-table-custom>
+    </div>
+    <div nz-col nzSpan="24" nzOffset="11">
+      
+      <button  nz-button nzSize='large' nzType="primary">提交</button>
+    </div>
+  
+  </div>
