--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,4 @@
   <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
 </a> -->
 
-<app-main-layout>
-  
-</app-main-layout>
+<app-main-layout></app-main-layout>
